Changed font-awesome icons with css.gg icons on all pages as font-awesome was creating loading issues on mobile and bad rating on lighthouse.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -322,7 +322,6 @@
     .action-indicator-item
     {
         color: rgb(255, 255, 255);
-        font-size: 1.5rem;
         margin: 5% 0;
     }
 
@@ -594,7 +593,7 @@
                      rgb(0 0 0) 0rem 0.1875rem 0.1875rem;
     }
 
-    .font-awesome-github
+    .footer-github-icon
     {
         color: rgb(255, 255, 255);
     }
@@ -605,7 +604,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
+        justify-content: space-evenly;
     }
 
     .footer-social-media-title
